# odin-cv-mmap-client

./: .gitignore  .gitmodules  README.md  hello.odin  main.odin  ols.json  play_glfw.odin  post_build.sh
.cursor/rules/: general.mdc
components/cvmmap/: cvmmap.odin
example/: test_closure.odin
lib/aux-img/: CMakeLists.txt  aux-img.odin  draw-detect.odin
lib/aux-img/inc/: aux.hpp  aux_c.h
lib/aux-img/info/: info.odin
lib/aux-img/socket/: socket.odin
lib/aux-img/src/: aux.cpp  skt.cpp
lib/draw-skt/: .clang-format  .gitignore  CMakeLists.txt
lib/draw-skt/src/: skt.cpp
test/: bit_field.cpp
